# leela-zero

./: CMakeLists.txt  README.md
python/: CMakeLists.txt
python/src/: PyLeela.cpp  advisor.cpp  advisor.h  nogil.h
src/: GTP.cpp  GTP.h  UCTSearch.cpp  UCTSearch.h
